# stunning-parakeet

./: .mxproject  CMakeLists.txt  STM32H735G-DK.ioc  STM32H735G-DK.txt  STM32H735IGKx_FLASH.ld  backup_STM32H735G-DK.ioc  changelog.txt  readme.md
Core/Inc/: FreeRTOSConfig.h  circular_buffer.h  main.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Src/: main.c  stm32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
Drivers/BSP/STM32H735G-DK/: stm32h735g_discovery_bus.h
EWARM/: STM32H735G-DK.ewp  stm32h735xx_flash.icf
LWIP/App/: lwip.c  lwip.h
MDK-ARM/: STM32H735G-DK.sct  STM32H735G-DK.uvoptx  STM32H735G-DK.uvprojx
STM32CubeIDE/: .cproject  .project  STM32H735G-DK Debug.launch  STM32H735G-DK.launch  STM32H735IGKX_FLASH.ld  STM32H735IGKX_RAM.ld
STM32CubeIDE/Application/User/Core/: lwip_user.c
STM32CubeIDE/Debug/: STM32H735G-DK.map  makefile  objects.list  sources.mk
STM32CubeIDE/Debug/Drivers/CMSIS/: subdir.mk  system_stm32h7xx.cyclo  system_stm32h7xx.d  system_stm32h7xx.su
STM32CubeIDE/Debug/Drivers/STM32H7xx_HAL_Driver/: stm32h7xx_hal.cyclo  stm32h7xx_hal.d  stm32h7xx_hal.su  stm32h7xx_hal_cortex.cyclo  stm32h7xx_hal_cortex.d  stm32h7xx_hal_cortex.su  stm32h7xx_hal_crc.cyclo  stm32h7xx_hal_crc.d  stm32h7xx_hal_crc.su  stm32h7xx_hal_crc_ex.cyclo  stm32h7xx_hal_crc_ex.d  stm32h7xx_hal_crc_ex.su  stm32h7xx_hal_dma.cyclo  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma.su  stm32h7xx_hal_dma2d.cyclo  stm32h7xx_hal_dma2d.d  stm32h7xx_hal_dma2d.su  stm32h7xx_hal_dma_ex.cyclo  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_dma_ex.su  stm32h7xx_hal_eth.cyclo  stm32h7xx_hal_eth.d  stm32h7xx_hal_eth.su  stm32h7xx_hal_eth_ex.cyclo  stm32h7xx_hal_eth_ex.d  stm32h7xx_hal_eth_ex.su  stm32h7xx_hal_exti.cyclo  stm32h7xx_hal_exti.d  stm32h7xx_hal_exti.su  stm32h7xx_hal_flash.cyclo  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash.su  stm32h7xx_hal_flash_ex.cyclo  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_flash_ex.su  stm32h7xx_hal_gpio.cyclo  stm32h7xx_hal_gpio.d  stm32h7xx_hal_gpio.su  stm32h7xx_hal_hsem.cyclo  (+43 more)
STM32CubeIDE/Debug/Middlewares/FreeRTOS/: cmsis_os2.cyclo  cmsis_os2.d  cmsis_os2.su  croutine.d  event_groups.cyclo  event_groups.d  event_groups.su  heap_4.cyclo  heap_4.d  heap_4.su  list.cyclo  list.d  list.su  port.cyclo  port.d  port.su  queue.cyclo  queue.d  queue.su  stream_buffer.cyclo  stream_buffer.d  stream_buffer.su  subdir.mk  tasks.cyclo  tasks.d  tasks.su  timers.cyclo  timers.d  timers.su
STM32CubeIDE/Debug/Middlewares/LibJPEG/: jaricom.d  jcapimin.cyclo  jcapimin.d  jcapimin.su  jcapistd.cyclo  jcapistd.d  jcapistd.su  jcarith.cyclo  jcarith.d  jcarith.su  jccoefct.cyclo  jccoefct.d  jccoefct.su  jccolor.cyclo  jccolor.d  jccolor.su  jcdctmgr.cyclo  jcdctmgr.d  jcdctmgr.su  jchuff.cyclo  jchuff.d  jchuff.su  jcinit.cyclo  jcinit.d  jcinit.su  jcmainct.cyclo  jcmainct.d  jcmainct.su  jcmarker.cyclo  jcmarker.d  jcmarker.su  jcmaster.cyclo  jcmaster.d  jcmaster.su  jcomapi.cyclo  jcomapi.d  jcomapi.su  jcparam.cyclo  jcparam.d  jcparam.su  (+97 more)
STM32CubeIDE/Debug/Middlewares/LwIP/: altcp.d  altcp_alloc.d  altcp_tcp.d  api_lib.cyclo  api_lib.d  api_lib.su  api_msg.cyclo  api_msg.d  api_msg.su  auth.d  autoip.d  bridgeif.d  bridgeif_fdb.cyclo  bridgeif_fdb.d  bridgeif_fdb.su  ccp.d  chap-md5.d  chap-new.d  chap_ms.d  def.cyclo  def.d  def.su  demand.d  dhcp.cyclo  dhcp.d  dhcp.su  dhcp6.d  dns.cyclo  dns.d  dns.su  eap.d  ecp.d  err.cyclo  err.d  err.su  etharp.cyclo  etharp.d  etharp.su  ethernet.cyclo  ethernet.d  (+108 more)
STM32CubeIDE/Release/: STM32H735G-DK.list  STM32H735G-DK.map  objects.list  sources.mk
STM32CubeIDE/Release/Drivers/CMSIS/: subdir.mk  system_stm32h7xx.d
STM32CubeIDE/Release/Drivers/STM32H7xx_HAL_Driver/: stm32h7xx_hal.cyclo  stm32h7xx_hal.d  stm32h7xx_hal_cortex.cyclo  stm32h7xx_hal_cortex.d  stm32h7xx_hal_cortex.su  stm32h7xx_hal_crc.d  stm32h7xx_hal_crc_ex.d  stm32h7xx_hal_dma.cyclo  stm32h7xx_hal_dma.d  stm32h7xx_hal_dma2d.d  stm32h7xx_hal_dma2d.su  stm32h7xx_hal_dma_ex.cyclo  stm32h7xx_hal_dma_ex.d  stm32h7xx_hal_eth.d  stm32h7xx_hal_eth.su  stm32h7xx_hal_eth_ex.cyclo  stm32h7xx_hal_eth_ex.d  stm32h7xx_hal_exti.cyclo  stm32h7xx_hal_exti.d  stm32h7xx_hal_exti.su  stm32h7xx_hal_flash.d  stm32h7xx_hal_flash.su  stm32h7xx_hal_flash_ex.d  stm32h7xx_hal_gpio.cyclo  stm32h7xx_hal_gpio.d  stm32h7xx_hal_gpio.su  stm32h7xx_hal_hsem.cyclo  stm32h7xx_hal_hsem.d  stm32h7xx_hal_hsem.su  stm32h7xx_hal_i2c.cyclo  stm32h7xx_hal_i2c.d  stm32h7xx_hal_i2c_ex.cyclo  stm32h7xx_hal_i2c_ex.d  stm32h7xx_hal_ltdc.cyclo  stm32h7xx_hal_ltdc.d  stm32h7xx_hal_ltdc_ex.d  stm32h7xx_hal_mdma.d  stm32h7xx_hal_ospi.cyclo  stm32h7xx_hal_ospi.d  stm32h7xx_hal_pwr.d  (+9 more)
STM32CubeIDE/Release/Middlewares/FreeRTOS/: cmsis_os2.d  cmsis_os2.su  croutine.d  event_groups.cyclo  event_groups.su  heap_4.cyclo  heap_4.d  list.d  list.su  port.cyclo  queue.cyclo  queue.d  queue.su  stream_buffer.cyclo  stream_buffer.su  subdir.mk  tasks.d  tasks.su  timers.cyclo
STM32CubeIDE/Release/Middlewares/LibJPEG/: jcapimin.cyclo  jcapimin.d  jcapistd.cyclo  jcapistd.d  jcapistd.su  jcarith.su  jccoefct.su  jccolor.su  jcdctmgr.cyclo  jcdctmgr.d  jcdctmgr.su  jchuff.cyclo  jcinit.cyclo  jcinit.d  jcmainct.d  jcmarker.cyclo  jcmarker.su  jcmaster.cyclo  jcmaster.su  jcomapi.cyclo  jcparam.cyclo  jcparam.d  jcprepct.cyclo  jcprepct.d  jcprepct.su  jcsample.cyclo  jcsample.d  jcsample.su  jctrans.d  jctrans.su  jdapimin.cyclo  jdapimin.su  jdapistd.cyclo  jdapistd.d  jdarith.d  jdarith.su  jdatasrc.d  jdcoefct.cyclo  jdcolor.cyclo  jdcolor.su  (+32 more)
STM32CubeIDE/Release/Middlewares/LwIP/: altcp.d  altcp_alloc.d  altcp_tcp.d  api_lib.d  api_msg.d  auth.d  (+109 more)
TouchGFX/: ApplicationTemplate.touchgfx.part  JCD.touchgfx  MyApplication.touchgfx  MyApplication_backup.touchgfx  application.config  target.config  us.stackdump
TouchGFX/assets/texts/: texts.xlsx  texts.xml
TouchGFX/config/gcc/: app.mk
TouchGFX/config/msvs/: Application.props
TouchGFX/simulator/msvs/: Application.vcxproj  Application.vcxproj.filters
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
gcc/: Makefile  STM32H735IGKX_FLASH.ld
(+168 files in other folders)
